force-app/main/default/objects/animalos__Alert__c/animalos__Alert__c.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <nameField>
        <displayFormat>AL{00000}</displayFormat>
        <label>Alert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>