force-app/main/default/objects/animalos__Alert__c/fields/animalos__Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>animalos__Alert_Message__c</fullName>
    <label>Alert Message</label>
    <type>TextArea</type>
</CustomField>