force-app/main/default/objects/animalos__Alert__c/fields/animalos__Available_In_Community__c.field-meta.xml
<CustomField>
    <fullName>animalos__Available_In_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available In Community</label>
    <type>Checkbox</type>
</CustomField>