force-app/main/default/objects/animalos__Alert__c/fields/animalos__Condition__c.field-meta.xml
<CustomField>
    <fullName>animalos__Condition__c</fullName>
    <label>Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>