force-app/main/default/objects/animalos__Alert__c/fields/animalos__Display_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>animalos__Display_Created_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows the Alert creation date</description>
    <label>Display Created Date</label>
    <type>Checkbox</type>
</CustomField>