force-app/main/default/objects/animalos__Alert__c/fields/animalos__Group__c.field-meta.xml
<CustomField>
    <fullName>animalos__Group__c</fullName>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>