force-app/main/default/objects/animalos__Alert__c/fields/animalos__Message__c.field-meta.xml
<CustomField>
    <fullName>animalos__Message__c</fullName>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>