force-app/main/default/objects/animalos__Alert__c/fields/animalos__Message_Formatted__c.field-meta.xml
<CustomField>
    <fullName>animalos__Message_Formatted__c</fullName>
    <label>Message Formatted</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>