force-app/main/default/objects/animalos__Alert__c/fields/animalos__Modal_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>animalos__Modal_Button_Label__c</fullName>
    <defaultValue>&apos;Acknowledge&apos;</defaultValue>
    <label>Modal Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>