force-app/main/default/objects/animalos__Alert__c/fields/animalos__Modal_Title__c.field-meta.xml
<CustomField>
    <fullName>animalos__Modal_Title__c</fullName>
    <label>Modal Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>