force-app/main/default/objects/animalos__Alert__c/fields/animalos__Mode__c.field-meta.xml
<CustomField>
    <fullName>animalos__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dismissible</fullName>
            </value>
            <value>
                <fullName>Sticky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>