force-app/main/default/objects/animalos__Alert__c/fields/animalos__Profiles__c.field-meta.xml
<CustomField>
    <fullName>animalos__Profiles__c</fullName>
    <label>Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>