force-app/main/default/objects/animalos__Alert__c/fields/animalos__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>