force-app/main/default/objects/animalos__Alert__c/fields/animalos__Style__c.field-meta.xml
<CustomField>
    <fullName>animalos__Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Toast</fullName>
            </value>
            <value>
                <fullName>Modal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>