force-app/main/default/objects/animalos__Alert__c/fields/animalos__Target_Object__c.field-meta.xml
<CustomField>
    <fullName>animalos__Target_Object__c</fullName>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>