force-app/main/default/objects/animalos__Alert__c/fields/animalos__Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>animalos__Target_Record_Id__c</fullName>
    <label>Target Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>