force-app/main/default/objects/animalos__Alert__c/fields/animalos__Variant__c.field-meta.xml
<CustomField>
    <fullName>animalos__Variant__c</fullName>
    <label>Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Danger</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>